--- a/Shipping/ChinaShipping-NationalHoliday-2014.MW
+++ b/Shipping/ChinaShipping-NationalHoliday-2014.MW
@@ -2,8 +2,9 @@
 !DATE
 !TIME
 !Days
-!SERVICE
-!WHERE
+!SERVICE OR LOCATION
+!DESCRIPTION OF EVENT
+!Source of Data
 !NOTES
 |-
 |10/1/2014
@@ -11,6 +12,7 @@
 |0
 |Confirmed
 |
+|Seeedstudio
 |First Day of National Holiday
 |-
 |10/1/2014
@@ -18,6 +20,7 @@
 |0
 |PCB Confirmed
 |This order has PCB item(s)
+|Seeedstudio
 |
 |-
 |10/1/2014
@@ -25,27 +28,31 @@
 |0
 |PCB Confirmed
 |Payment Status: Completed
+|Seeedstudio
 |
 |-
 |10/1/2014
 |
 |0
 |PCB Processing
-|PCB File:D132529_63792_RPI_GVS_CFG.zip is now under processing.
+|PCB File:...GVS_CFG.zip is now under processing.
+|Seeedstudio
 |
 |-
 |10/4/2014
 |
 |3
 |PCB Processing
-|PCB File:D132529_63792_RPI_GVS_CFG.zip passed file examination.
+|PCB File:...GVS_CFG.zip passed file examination.
+|Seeedstudio
 |
 |-
 |10/8/2014
 |
 |7
 |In production
-|D132529_63792_RPI_GVS_CFG is coming back from production workshop.
+|...GVS_CFG is coming back from production workshop.
+|Seeedstudio
 |End of National Holiday
 |-
 |10/9/2014
@@ -53,6 +60,7 @@
 |8
 |Processing
 |
+|Seeedstudio
 |
 |-
 |10/9/2014
@@ -60,6 +68,7 @@
 |8
 |Shipped
 |Order was shipped
+|Seeedstudio
 |
 |-
 |10/10/2014
@@ -67,6 +76,7 @@
 |9
 |Traceable
 |Order was Traceable
+|Seeedstudio
 |
 |-
 |10/10/2014
@@ -74,6 +84,7 @@
 |9
 |Shenzhen
 |Order Received
+|EC-Firstclass
 |
 |-
 |10/10/2014
@@ -81,6 +92,7 @@
 |9
 |Shenzhen
 |Sent to CUE processing center
+|EC-Firstclass
 |8 day backlog in the processing center
 |-
 |10/18/2014
@@ -88,6 +100,7 @@
 |17
 |Shenzhen
 |Arrived at export port
+|EC-Firstclass
 |
 |-
 |10/19/2014
@@ -95,6 +108,7 @@
 |18
 |InDelivery
 |Departed
+|EC-Firstclass
 |
 |-
 |10/20/2014
@@ -102,6 +116,7 @@
 |19
 |United States
 |Arrived at destination port
+|EC-Firstclass
 |
 |-
 |10/21/2014
@@ -109,6 +124,7 @@
 |20
 |United States
 |Waiting for customs clearance on 2014-10-21 14:44
+|EC-Firstclass
 |
 |-
 |10/23/2014
@@ -116,6 +132,7 @@
 |22
 |United States
 |Arrived at destination sort facility on 2014-10-23 18:54
+|EC-Firstclass
 |
 |-
 |10/23/2014
@@ -123,6 +140,71 @@
 |22
 |United States
 |Waiting for delivery on 2014-10-23 18:54
+|EC-Firstclass
+|
+|-
+|10/25/2014
+|13:01:00
+|24
+|USPS
+|Secaucus, NJ, PICKED UP BY SHIPPING PARTNER
+|EC-Firstclass
+|
+|-
+|10/25/2014
+|16:30:00
+|24
+|SECAUCUS, NJ 07094
+|Arrived Shipping Partner Facility
+|USPS
+|
+|-
+|10/26/2014
+|5:30:00
+|25
+|USPS
+|Secaucus, NJ, ARRIVAL COURIERS FACILITY
+|EC-Firstclass
+|
+|-
+|10/27/2014
+|19:26:00
+|26
+|USPS
+|Secaucus, NJ, DEPARTURE COURIERS FACILITY
+|EC-Firstclass
+|
+|-
+|10/27/2014
+|13:01:00
+|26
+|USPS
+|Secaucus, NJ, PROCESSED
+|EC-Firstclass
+|
+|-
+|10/27/2014
+|6:26:00
+|
+|SECAUCUS, NJ 07094 
+|Departed Shipping Partner Facility
+|USPS
+|
+|-
+|
+|
+|
+|
+|
+|
+|
+|-
+|
+|
+|
+|
+|
+|
 |
 |-
 |}
