--- a/README.mediawiki
+++ b/README.mediawiki
@@ -2,4 +2,4 @@
 
 This is where we keep our corporate identity stuff like logos, mission statements, etc.
 
-img src="http://land-boards.com/lb-logos/LB-banner-Proof-2.png"></img>
+<img src="http://land-boards.com/lb-logos/LB-banner-Proof-2.png"></img>
