--- a/README.mediawiki
+++ b/README.mediawiki
@@ -1,3 +1,5 @@
+<a href="https://www.tindie.com/stores/land_boards/"><img src="http://land-boards.com/blwiki/images/5/51/Tindie-mediums.png" alt="Tindie Logo"></img></a>
+
 == corporate-Identity ==
 
 <img src="http://land-boards.com/lb-logos/LB-banner-Proof-2.png"></img>
